hidding the scrollbar and fixing the enjoy page

--- a/app/templates/bender-ui/src/App.css
+++ b/app/templates/bender-ui/src/App.css
@@ -14,6 +14,14 @@
   src: local('Pinyon Script'), url(./fonts/Pinyon_Script/PinyonScript-Regular.ttf) format('truetype');
 }
 
+body::-webkit-scrollbar {
+    display: none;
+}
+
+body {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
 
 .hero.has-background {
   position: relative;
